--- a/PEANUT/result_cal.ipynb
+++ b/PEANUT/result_cal.ipynb
@@ -10,15 +10,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average step_compression: 1.3574834006300494\n",
-      "Average latency: 35.000495648384096\n"
+      "Average step_compression: 1.0\n",
+      "Average latency: 83.12873847484589\n"
      ]
     }
    ],
@@ -29,6 +29,7 @@
     "\n",
     "# 如果数据存储在文件中，可以取消注释以下代码读取\n",
     "file_path = '/home/leihaodong/MM25/script_MM/PEANUT/exp/llamagen_1/eagle_v1/global_statistics_0_10000.json'\n",
+    "file_path = \"/home/leihaodong/MM25/script_MM/PEANUT/exp/anole_1/base/global_statistics_0_10000.json\"\n",
     "with open(file_path, 'r') as f:\n",
     "    data = json.load(f)\n",
     "\n",
@@ -48,7 +49,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lantern",
+   "display_name": "eagle",
    "language": "python",
    "name": "python3"
   },
@@ -62,7 +63,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
